CREATE DATABASE IF NOT EXISTS sae51db; USE sae51db;
CREATE TABLE "pc" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "marqueId" int,
  "osId" int,
  "disqueGB" int,
  "ramGB" int,
  "dateAchat" date,
  "user" varchar
);

CREATE TABLE "marque" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nom" varchar
);

CREATE TABLE "os" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nom" varchar
);

CREATE TABLE "logiciel_instal" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pcId" int,
  "logicielId" int,
  "techInstal" int
);

CREATE TABLE "logiciel" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nom" varchar,
  "licence" varchar,
  "version" varchar
);

CREATE TABLE "technicien" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nom" varchar,
  "dateInterv" date,
  "pcInterv" int
);

CREATE TABLE "maj" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pcMaj" int,
  "techMaj" int,
  "dateMaj" date
);

ALTER TABLE "logiciel_instal" ADD FOREIGN KEY ("pcId") REFERENCES "pc" ("id");

ALTER TABLE "logiciel_instal" ADD FOREIGN KEY ("logicielId") REFERENCES "logiciel" ("id");

ALTER TABLE "pc" ADD FOREIGN KEY ("marqueId") REFERENCES "marque" ("id");

ALTER TABLE "pc" ADD FOREIGN KEY ("osId") REFERENCES "os" ("id");

ALTER TABLE "maj" ADD FOREIGN KEY ("pcMaj") REFERENCES "pc" ("id");

ALTER TABLE "maj" ADD FOREIGN KEY ("techMaj") REFERENCES "technicien" ("id");

ALTER TABLE "technicien" ADD FOREIGN KEY ("pcInterv") REFERENCES "pc" ("id");

ALTER TABLE "logiciel_instal" ADD FOREIGN KEY ("techInstal") REFERENCES "technicien" ("id");

